More rearranging of welcome page. Achievements now have more prominence. Fixed some spacing.

--- a/media/user.css
+++ b/media/user.css
@@ -17,6 +17,7 @@
     height:50px;
     margin:0.25em;
     margin-left:-0.25em;
+    margin-right:0.5em;
     padding:0.25em;
     padding-top:0.5em;
     border:1px solid #D8CF84;
